--- a/css/blockdrop.css
+++ b/css/blockdrop.css
@@ -17,10 +17,11 @@ h1 {
 }
 
 #game-wrapper {
-	width: 16em;
-	height: 20em;
+	width: 16.5em;
+	height: 21em;
 	margin: 0 auto;
 	position: relative;
+	background: black;
 }
 
 #game-board {
@@ -31,8 +32,8 @@ h1 {
 	overflow: hidden;
 	
 	position: absolute;
-	left: 0;
-	top: 0;
+	left: 0.5em;
+	top: 0.5em;
 }
 #game-info {
 	background: black;
@@ -42,7 +43,7 @@ h1 {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	width: 6em;
-	height: 20em;
+	height: 21em;
 	padding: 1em;
 	
 	position: absolute;
