--- a/css/blockdrop.css
+++ b/css/blockdrop.css
@@ -3,6 +3,7 @@ body {
 	margin: 0;
 	padding: 0;
 	
+	background: #333;
 	font-family: 'robotolocalcopy','Roboto',sans-serif;
 	
 	/* set the base font size as 10px in html,
