--- a/css/blockdrop.css
+++ b/css/blockdrop.css
@@ -4,7 +4,7 @@ body {
 	padding: 0;
 	
 	background: #333;
-	font-family: /*'robotolocalcopy',*/'Roboto',sans-serif;
+	font-family: 'Roboto', sans-serif;
 	
 	/* set the base font size as 10px in html,
 	 * can now resize the whole game board by
