--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,7 +1,7 @@
 
 /* Roboto Thin */
 @font-face {
-    font-family: 'robotolocalcopy';
+    font-family: 'Roboto';
     src: url('../fonts/Roboto-Thin-webfont.eot');
     src: url('../fonts/Roboto-Thin-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Roboto-Thin-webfont.woff') format('woff'),
@@ -13,7 +13,7 @@
 
 /* Roboto Light */
 /* @font-face {
-    font-family: 'robotolocalcopy';
+    font-family: 'Roboto';
     src: url('../fonts/Roboto-Light-webfont.eot');
     src: url('../fonts/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Roboto-Light-webfont.woff') format('woff'),
@@ -25,7 +25,7 @@
 
 /* Roboto Regular */
 @font-face {
-    font-family: 'robotolocalcopy';
+    font-family: 'Roboto';
     src: url('../fonts/Roboto-Regular-webfont.eot');
     src: url('../fonts/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Roboto-Regular-webfont.woff') format('woff'),
@@ -37,7 +37,7 @@
 
 /* Roboto Medium */
 /* @font-face {
-    font-family: 'robotolocalcopy';
+    font-family: 'Roboto';
     src: url('../fonts/Roboto-Medium-webfont.eot');
     src: url('../fonts/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Roboto-Medium-webfont.woff') format('woff'),
@@ -49,7 +49,7 @@
 
 /* Roboto Bold */
 /* @font-face {
-    font-family: 'robotolocalcopy';
+    font-family: 'Roboto';
     src: url('../fonts/Roboto-Bold-webfont.eot');
     src: url('../fonts/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Roboto-Bold-webfont.woff') format('woff'),
@@ -61,7 +61,7 @@
 
 /* Roboto Black */
 @font-face {
-    font-family: 'robotolocalcopy';
+    font-family: 'Roboto';
     src: url('../fonts/Roboto-Black-webfont.eot');
     src: url('../fonts/Roboto-Black-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Roboto-Black-webfont.woff') format('woff'),
