--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,71 +2,53 @@
 /* Roboto Thin */
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Thin-webfont.eot');
-    src: url('../fonts/Roboto-Thin-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Thin-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Thin-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Thin-webfont.svg#robotothin') format('svg');
     font-weight: 100;
     font-style: normal;
+    src: local('Roboto Thin'), local('Roboto-Thin'),
+        url('../fonts/Roboto-Thin-webfont.woff') format('woff');
 }
 
 /* Roboto Light */
 /* @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Light-webfont.eot');
-    src: url('../fonts/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Light-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Light-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Light-webfont.svg#robotolight') format('svg');
     font-weight: 200;
     font-style: normal;
+    src: local('Roboto Light'), local('Roboto-Light'),
+        url('../fonts/Roboto-Light-webfont.woff') format('woff');
 } */
 
 /* Roboto Regular */
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Regular-webfont.eot');
-    src: url('../fonts/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Regular-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Regular-webfont.svg#robotoregular') format('svg');
     font-weight: normal; /* 400 */
     font-style: normal;
+    src: local('Roboto Regular'), local('Roboto-Regular'),
+        url('../fonts/Roboto-Regular-webfont.woff') format('woff');
 }
 
 /* Roboto Medium */
 /* @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Medium-webfont.eot');
-    src: url('../fonts/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Medium-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Medium-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Medium-webfont.svg#robotomedium') format('svg');
     font-weight: 500;
     font-style: normal;
+    src: local('Roboto Medium'), local('Roboto-Medium'),
+        url('../fonts/Roboto-Medium-webfont.woff') format('woff');
 } */
 
 /* Roboto Bold */
 /* @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Bold-webfont.eot');
-    src: url('../fonts/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Bold-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Bold-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Bold-webfont.svg#robotobold') format('svg');
     font-weight: bold; /* 700
     font-style: normal;
+    src: local('Roboto Bold'), local('Roboto-Bold'),
+        url('../fonts/Roboto-Bold-webfont.woff') format('woff');
 } */
 
 /* Roboto Black */
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Black-webfont.eot');
-    src: url('../fonts/Roboto-Black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Black-webfont.woff') format('woff'),
-         url('../fonts/Roboto-Black-webfont.ttf') format('truetype'),
-         url('../fonts/Roboto-Black-webfont.svg#robotoblack') format('svg');
     font-weight: 900;
     font-style: normal;
+    src: local('Roboto Black'), local('Roboto-Black'),
+        url('../fonts/Roboto-Black-webfont.woff') format('woff');
 }
