--- a/src/template/scores.tpl.html
+++ b/src/template/scores.tpl.html
@@ -1,7 +1,7 @@
 <table>
     <thead>
     <tr>
-        <th></th>
+        <th>&nbsp;</th>
         <th>Score</th>
         <th>Player</th>
     </tr>
