--- a/src/template/about.tpl.html
+++ b/src/template/about.tpl.html
@@ -36,7 +36,7 @@
         hard drops the piece (drop all the way to the bottom)
     </p>
     <p>
-        <br /><i class="fa fa-github"></i> GitHub: view the <a href='https://github.com/bkbooth/BlockDrop' target='_blank'>source code</a> or
+        <br /><i class="fa fa-2x fa-github"></i> GitHub: view the <a href='https://github.com/bkbooth/BlockDrop' target='_blank'>source code</a> or
         <a href='https://github.com/bkbooth' target='_blank'>find me</a>
     </p>
 </div>
