--- a/src/css/blockdrop.css
+++ b/src/css/blockdrop.css
@@ -38,8 +38,32 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-left: -0.5em;
-    margin-top: -0.5em;
+    margin-left: -0.6em;
+    margin-top: -0.8em;
+}
+#loading progress {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -2.3em;
+    margin-top: 1.5em;
+
+    width: 5em;
+    height: 1em;
+    padding: 5px;
+
+    border: 5px solid #428bca;
+    border-radius: 5px;
+    background: none;
+}
+#loading progress::-webkit-progress-bar {
+    background: none;
+}
+#loading progress::-webkit-progress-value {
+    background: #428bca;
+}
+#loading progress::-moz-progress-bar {
+    background: #428bca;
 }
 
 #game-wrapper {
